--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
   <script defer src="./js/script.js"></script>
 
   <title>Pokédex</title>
+
+<!-- GetResponse Chats -->
+        <script>
+            var _grChatConfig = {urlParams:"c=f6a77f930ce359c19b8be74f765d06c36e89008391e5810666c74c5d67",iuv:"v1"}
+            // Custom configuration goes here
+            !function(a,e){Array.isArray(window.__GrChatData__)?window.__GrChatData__.push(e):window.__GrChatData__=[e];
+            var r=document.createElement("script");r.defer=!0;var t=document.getElementsByTagName("script")[0];
+            t.parentNode.insertBefore(r,t),r.src="https://i.getresponse.chat/embedded_chat.js"}(0,_grChatConfig);
+        </script>
+<!-- End GetResponse Chats -->
+  
 </head>
 <body>
   
